--- a/sass/hagrid-themes/oye-marco/vars/_btn.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_btn.sass
@@ -4,10 +4,18 @@ $btn-text-transform: normal
 $btn-padding: 0.7em 1em
 $btn-font-size: 1em
 $btn-font-weight: 400
+$btn-margin: 0.25
+$btn-text-align: center
+$btn-border: 1px solid
 
+$btn-shadow-border-radius: 2px
+$btn-shadow-box-shadow: 1px 2px 3px
+
+$btn-outline-sides-padding: 2em
 $btn-outline-border-radius: 100px
 $btn-outline-border-width: 3px
 $btn-outline-hover-bkg: true
+$btn-outline-border-style: solid
 
 $btn-upper-border-radius: 4px
 
