--- a/sass/hagrid-themes/oye-marco/vars/_dropdown.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_dropdown.sass
@@ -1,6 +1,33 @@
 // DropDowns
-$dropdown-menu__bgc: #fff
-$dropdown-menu__bxsh: 0 2px 5px rgba(0,0,0, .2)
-$dropdown-menu_item-padding: .5em 1em
-$dropdown-menu_item-hover: rgba(0, 0, 0, .02)
-$dropdown-outline__bdw: 1px
+$dropdown-btn-margin:  0 .5em
+  
+$dropdown-btn-width: 100%
+$dropdown-btn-text-align: left
+
+$dropdown-outline-bdw: 1px
+$dropdown-btn-outline-margin: 0
+
+$dropdown-btn-icon-width: 2.5em
+$dropdown-btn-icon-height: 100%
+$dropdown-btn-icon-margin-left: .5em
+$dropdown-btn-icon-top: 50%
+$dropdown-btn-icon-right: -15px
+
+$dropdown-menu-bgc: #fff
+$dropdown-menu-width: 100%
+$dropdown-menu-bxsh: 0 2px 5px rgba(0,0,0, .2)
+$dropdown-menu-top: 100%
+$dropdown-menu-padding: 0
+$dropdown-menu-margin: 5px 0 0
+$dropdown-menu-list-style: none
+$dropdown-menu-min-width: 140px
+$dropdown-menu-border-radius: 5px
+
+$dropdown-menu-item-padding: .5em 1em
+$dropdown-menu-item-text-decoration: none
+$dropdown-menu-item-color: inherit
+$dropdown-menu-item-hover: rgba(0, 0, 0, .02)
+
+$dropdown-outline-menu-box-shadow: none
+$dropdown-outline-menu-border-radius: 0
+$dropdown-outline-menu-border: solid 1px
