--- a/sass/hagrid-themes/oye-marco/vars/_base.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_base.sass
@@ -18,10 +18,10 @@ $pink: #DD2F74
 $colors: 'yellow' $yellow, 'orange' $orange, 'purple' $purple, 'dark-purple' $dark-purple, 'dark-blue' $dark-blue, 'brown' $brown, 'grey' $grey, 'red' $red, 'pink' $pink
 $color-default: #FFF//#ECECEC
 $color-primary: #2962ff//#0090E7
-$color-secondary: #31C290//#1FC757
+$color-secondary: #ab47bc//#1FC757
 $color-inverse: #3C3C3C
 $color-light: #f8f8f8
-$color-info: #00BCD4//#00B5E7//#1F91BF//#6E2CDD
+$color-info: #45c7f4//#00B5E7//#1F91BF//#6E2CDD
 $color-warning: #E68523
 $color-error: #C53030 // #ec407a
 $base-colors: default $color-default, 'light' $color-light, 'inverse' $color-inverse, 'primary' $color-primary, 'secondary' $color-secondary, 'info' $color-info, 'warning' $color-warning, 'error' $color-error
