Paddings and colors

--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -35,11 +35,26 @@
   margin-bottom: 0
   margin-left: 0
 
+.p-20-top
+  padding-top: 20px
+
 .p-reset
   padding-top: 0
   padding-right: 0
   padding-bottom: 0
   padding-left: 0
+
+.p-30-top
+  padding-top: 30px
+
+.p-40-bottom
+  padding-bottom: 40px
+
+.p-80-bottom
+  padding-bottom: 80px
+  
+.p-80-top
+  padding-top: 80px
 
 .m-0
   margin: 0
