--- a/sass/hagrid-themes/oye-marco/vars/_badge.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_badge.sass
@@ -1,10 +1,10 @@
 // Badges
-$badge-background-color: #fff
-$badge-color: #333
+$badge-background-color: #80388d
+$badge-color: #FFF
 $badge-padding: 0.2em
 $badge-border-radius: 100%
 $badge-min-width: 1.4em
-$badge-height: 100%
+$badge-height: 0px
 $badge-margin: 0 0.1em
 $badge-font-size: 0.8em
 $badge-line-height: 1.1em
