--- a/sass/hagrid-themes/oye-marco/vars/_badge.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_badge.sass
@@ -1,13 +1,15 @@
 // Badges
 $badge-background-color: #80388d
 $badge-color: #FFF
-$badge-padding: 0.2em
+$badge-padding: 0.3em
 $badge-border-radius: 100%
 $badge-min-width: 1.4em
-$badge-height: 0px
+$badge-height: auto
+$badge-width: 35px
 $badge-margin: 0 0.1em
-$badge-font-size: 0.8em
+$badge-font-size: 20px
 $badge-line-height: 1.1em
 
 $badge-position-left-margin: 0 .5em 0 0
 $badge-position-right-margin: 0 0 0 .5em
+
