--- a/sass/hagrid-themes/oye-marco/vars/_base.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_base.sass
@@ -5,7 +5,7 @@ $i0: 0
 $init-percent-darken: 12%
 $init-percent-lighten: 12%
 $dark-grey: #777
-$gray: #eee
+$gray: #60616e
 $yellow: #D39756
 $orange: #AF482C
 $purple: #5E2E46
