Vars base and badge

--- a/sass/hagrid-core/badges/_badges.sass
+++ b/sass/hagrid-core/badges/_badges.sass
@@ -5,7 +5,7 @@
   border-radius: $badge-border-radius
   min-width: $badge-min-width
   height: $badge-height
-  width: $badge-width
+  width: 35px
   margin: $badge-margin
   font-size: $badge-font-size
   line-height: $badge-line-height
