--- a/sass/hagrid-themes/oye-marco/vars/_base.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_base.sass
@@ -12,7 +12,7 @@ $purple: #5E2E46
 $dark-purple: #291413
 $dark-blue: #002223
 $brown: #322723
-$grey: #E6E6E6
+$grey: #60616e
 $red: #AE0001
 $pink: #DD2F74
 $colors: 'yellow' $yellow, 'orange' $orange, 'purple' $purple, 'dark-purple' $dark-purple, 'dark-blue' $dark-blue, 'brown' $brown, 'grey' $grey, 'red' $red, 'pink' $pink
