Padding and width

--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -44,12 +44,21 @@
   padding-bottom: 0
   padding-left: 0
 
+.p-50
+  padding: 6px 50px
+
+.p-18
+  padding: 0px 18px
+
 .p-30-top
   padding-top: 30px
+
 .p-40-bottom
   padding-bottom: 40px
+
 .p-80-bottom
   padding-bottom: 80px
+
 .p-80-top
   padding-top: 80px
 
@@ -58,6 +67,9 @@
 
 .p-0
   padding: 0
+
+.l-h-32
+  line-height: 32px
 
 .of-hidden
   overflow: hidden
@@ -85,6 +97,22 @@
   left: 0
   top: 0
 
+.m-20-top
+  margin-top: 20px
+
+.f-right
+  float: right
+
+.f-left
+  float: left
+
+.w-75
+  width: 75%
+
+.w-70
+  width: 70%
+.w-85
+  width: 85%
 
 // Scroll
 
