--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -62,6 +62,12 @@
 .p-80-top
   padding-top: 80px
 
+.p-105-top
+  padding-top: 105px
+
+.p-200-bottom
+  padding-bottom: 200px
+
 .m-0
   margin: 0
 
@@ -99,6 +105,9 @@
 
 .m-20-top
   margin-top: 20px
+
+.m-40-top
+  margin-top: 40px
 
 .f-right
   float: right
