--- a/sass/hagrid-themes/oye-marco/vars/_base.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_base.sass
@@ -11,7 +11,7 @@ $orange: #AF482C
 $purple: #5E2E46
 $dark-purple: #291413
 $dark-blue: #002223
-$brown: #322723
+$brown: #b0b0b7
 $grey: #60616e
 $red: #AE0001
 $pink: #DD2F74
