--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -71,6 +71,9 @@
 .p-150-bottom
   padding-bottom: 150px
 
+.p-20
+  padding: 20px 0px
+
 .m-0
   margin: 0
 
@@ -79,6 +82,9 @@
 
 .l-h-32
   line-height: 32px
+  
+.lh-1
+  line-height: 1.5
 
 .of-hidden
   overflow: hidden
