--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -71,8 +71,6 @@
 .p-150-bottom
   padding-bottom: 150px
 
-.p-20
-  padding: 20px 0px
 
 .m-0
   margin: 0
@@ -82,9 +80,12 @@
 
 .l-h-32
   line-height: 32px
-  
-.lh-1
-  line-height: 1.5
+
+.l-h-24
+  line-height: 24px
+
+.l-h-28
+  line-height: 28px
 
 .of-hidden
   overflow: hidden
