--- a/sass/hagrid-themes/oye-marco/vars/_base.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_base.sass
@@ -13,7 +13,7 @@ $dark-purple: #291413
 $dark-blue: #002223
 $brown: #b0b0b7
 $grey: #60616e
-$red: #AE0001
+$red: #ec5d57
 $pink: #DD2F74
 $colors: 'yellow' $yellow, 'orange' $orange, 'purple' $purple, 'dark-purple' $dark-purple, 'dark-blue' $dark-blue, 'brown' $brown, 'grey' $grey, 'red' $red, 'pink' $pink
 $color-default: #FFF//#ECECEC
