--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -70,8 +70,14 @@
 
 .p-150-bottom
   padding-bottom: 150px
-
-
+.l-s-n
+  list-style: none  
+.t-d-n
+  text-decoration: none
+.d-b
+  display: block
+.d-n
+  display: none
 .m-0
   margin: 0
 
