--- a/sass/hagrid-core/buttons/_buttons.sass
+++ b/sass/hagrid-core/buttons/_buttons.sass
@@ -28,6 +28,9 @@
 
   &[class*="btn-"]
     color: #fff
+  &.btn-plans
+    background-color: #FFF
+    color: #ab47bc
 
   // Color Buttons
   @each $base-color in $base-colors
