Shadows and width

--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -70,16 +70,49 @@
 
 .p-150-bottom
   padding-bottom: 150px
+  
 .l-s-n
   list-style: none  
+
 .t-d-n
   text-decoration: none
+
 .d-b
   display: block
+
 .d-n
   display: none
+
 .m-0
   margin: 0
+
+.plans-d
+  padding-left: 10px
+  border-bottom: 1px solid #b0b0b7
+
+.p-10-l
+  padding-left: 10px
+
+.p-25-l
+  padding-left: 25px
+
+.p-25-r
+  padding-right: 25px
+
+.p-10-b
+  padding-bottom: 10px
+
+.p-20-30
+  padding: 20px 30px
+
+.plans
+  box-shadow: 0 2px 4px 0 rgba(96, 97, 110, 0.43)
+
+.msg
+  width: 90%
+
+.b-primary
+  border-top: 1px solid #2962ff
 
 .p-0
   padding: 0
