--- a/sass/hagrid-themes/oye-marco/vars/_base.sass
+++ b/sass/hagrid-themes/oye-marco/vars/_base.sass
@@ -7,7 +7,7 @@ $init-percent-lighten: 12%
 $dark-grey: #777
 $gray: #b0b0b7
 $yellow: #D39756
-$orange: #AF482C
+$orange: #8b3b37
 $purple: #5E2E46
 $dark-purple: #291413
 $dark-blue: #002223
