--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -70,7 +70,7 @@
 
 .p-150-bottom
   padding-bottom: 150px
-  
+
 .l-s-n
   list-style: none  
 
@@ -89,6 +89,15 @@
 .plans-d
   padding-left: 10px
   border-bottom: 1px solid #b0b0b7
+  
+.m-45-t
+  margin-top: 45px
+
+.p-50-r
+  padding-right: 50px
+
+.p-120-r
+  padding-right: 120px
 
 .p-10-l
   padding-left: 10px
