--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -89,7 +89,7 @@
 .plans-d
   padding-left: 10px
   border-bottom: 1px solid #b0b0b7
-  
+
 .m-45-t
   margin-top: 45px
 
@@ -123,6 +123,18 @@
 .b-primary
   border-top: 1px solid #2962ff
 
+.p-45-t
+  padding-top: 45px
+
+.p-60-t
+  padding-top: 60px
+
+.l-h-0
+  line-height: 0px
+  
+.p-07-top
+  padding-top: 7px
+  
 .p-0
   padding: 0
 
