--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -134,7 +134,22 @@
   
 .p-07-top
   padding-top: 7px
-  
+
+.pointer
+  cursor: pointer
+
+.b-primary-t
+  border-top: 1px solid #2962ff
+
+.p-0-t
+  padding-top: 0px
+
+.m--2-t
+  margin-top: -2px
+
+.overflow-h
+  overflow: hidden
+
 .p-0
   padding: 0
 
