Changes in helpers file. Add

--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -71,18 +71,6 @@
 .p-150-bottom
   padding-bottom: 150px
 
-.l-s-n
-  list-style: none  
-
-.t-d-n
-  text-decoration: none
-
-.d-b
-  display: block
-
-.d-n
-  display: none
-
 .m-0
   margin: 0
 
@@ -114,44 +102,60 @@
 .p-20-30
   padding: 20px 30px
 
-.plans
-  box-shadow: 0 2px 4px 0 rgba(96, 97, 110, 0.43)
-
-.msg
-  width: 90%
-
-.b-primary
-  border-top: 1px solid #2962ff
-
 .p-45-t
   padding-top: 45px
 
 .p-60-t
   padding-top: 60px
 
-.l-h-0
-  line-height: 0px
-  
 .p-07-top
   padding-top: 7px
-
-.pointer
-  cursor: pointer
-
-.b-primary-t
-  border-top: 1px solid #2962ff
 
 .p-0-t
   padding-top: 0px
 
-.m--2-t
-  margin-top: -2px
+.p-25-t
+  padding-top: 25px
 
-.overflow-h
-  overflow: hidden
+.m-10-b
+  margin-bottom: 10px
+
+.m-20-b
+  margin-bottom: 20px
 
 .p-0
   padding: 0
+
+.m-20-top
+  margin-top: 20px
+
+.m-40-top
+  margin-top: 40px
+
+// Text decoration
+
+.t-d-n
+  text-decoration: none
+
+// List Style
+
+.l-s-n
+  list-style: none  
+
+// Shadown
+
+.plans
+  box-shadow: 0 2px 4px 0 rgba(96, 97, 110, 0.43)
+
+.rectangle-red-shadow
+  box-shadow: 0 3px 5px 0 #a72d28
+
+// Font size
+
+.f-s-15
+  font-size: 15px 
+
+// Line height
 
 .l-h-32
   line-height: 32px
@@ -161,6 +165,60 @@
 
 .l-h-28
   line-height: 28px
+
+.l-h-0
+  line-height: 0px
+
+//Border
+
+.b-primary-t
+  border-top: 1px solid #2962ff
+
+.b-primary
+  border-top: 1px solid #2962ff
+
+// Cursor
+
+.pointer
+  cursor: pointer
+
+//Float
+
+.f-right
+  float: right
+
+.f-left
+  float: left
+
+//Overflow
+
+.overflow-h
+  overflow: hidden
+
+// Display
+
+.d-b
+  display: block
+
+.d-n
+  display: none
+
+.d-i
+  display: inline
+
+//Width
+
+.w-75
+  width: 75%
+
+.w-70
+  width: 70%
+
+.msg
+  width: 90%
+
+.w-85
+  width: 85%
 
 .of-hidden
   overflow: hidden
@@ -187,27 +245,6 @@
   width: 100%
   left: 0
   top: 0
-
-.m-20-top
-  margin-top: 20px
-
-.m-40-top
-  margin-top: 40px
-
-.f-right
-  float: right
-
-.f-left
-  float: left
-
-.w-75
-  width: 75%
-
-.w-70
-  width: 70%
-.w-85
-  width: 85%
-
 // Scroll
 
 .scroll-y
