Primary and Default buttons

--- a/sass/hagrid-core/buttons/_buttons.sass
+++ b/sass/hagrid-core/buttons/_buttons.sass
@@ -28,10 +28,15 @@
 
   &[class*="btn-"]
     color: #fff
-  &.btn-plans
-    background-color: #FFF
-    color: #ab47bc
 
+  &.btn-primary
+    background-color: #2962ff
+    color: #FFF
+
+  &.btn-default
+    background-color: #FFF
+    color: #2962ff
+    
   // Color Buttons
   @each $base-color in $base-colors
     $key: nth($base-color, 1)
