Add borders, paddings and font size

--- a/sass/hagrid-core/buttons/_buttons.sass
+++ b/sass/hagrid-core/buttons/_buttons.sass
@@ -33,7 +33,7 @@
     background-color: #2962ff
     color: #FFF
 
-  &.btn-default
+  &.btn-white
     background-color: #FFF
     color: #2962ff
     
