--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -43,6 +43,17 @@
   padding-right: 0
   padding-bottom: 0
   padding-left: 0
+.p-10-20
+  padding: 10px 20px
+
+.p-20
+  padding: 0px 20px
+
+.p-30-20
+  padding: 30px 20px
+
+.p-20-b
+  padding-bottom: 20px
 
 .p-50
   padding: 6px 50px
@@ -132,6 +143,13 @@
 .m-40-top
   margin-top: 40px
 
+.m--20-l
+  margin-left: -10px !important
+
+.m--1-t
+  margin-top: -1px
+
+
 // Text decoration
 
 .t-d-n
@@ -154,6 +172,8 @@
 
 .f-s-15
   font-size: 15px 
+.f-s-11
+  font-size: 11px
 
 // Line height
 
@@ -176,6 +196,15 @@
 
 .b-primary
   border-top: 1px solid #2962ff
+
+.b-primary-b
+  border-bottom: 1px solid #2962ff
+  
+.b-l-grey-color
+  border-left: solid 0.5px rgba(214,214,214,0.6)
+
+.grey-bgc-o
+  background-color: rgba(214,214,214,0.2)
 
 // Cursor
 
