--- a/sass/hagrid-core/helpers/_helpers.sass
+++ b/sass/hagrid-core/helpers/_helpers.sass
@@ -163,10 +163,10 @@
 // Shadown
 
 .plans
-  box-shadow: 0 2px 4px 0 rgba(96, 97, 110, 0.43)
+  box-shadow: 0 2px 4px 2px rgba(96, 97, 110, 0.43)
 
 .rectangle-red-shadow
-  box-shadow: 0 3px 5px 0 #a72d28
+  box-shadow: 0px 4px 10px 0 #a72d28
 
 // Font size
 
